thirdcontentsection almost finished, aligned the header correctly, need to fix font sizes and add links next

--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    padding-left: 15%;
-    padding-right: 15%;
+    padding-left: 20%;
+    padding-right: 20%;
     padding-bottom: 3%;
     padding-top: 2%;
     background: darkcyan;
@@ -19,15 +19,16 @@
 
 .header {
     display: flex;
-    justify-content: center;
     align-items: center;
     gap: 50%;
     box-sizing: border-box;
 }
 
 .header-logo {
-    font-size: 24px;
+    font-size: 32px;
     color: rgb(240, 240, 245);
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -44,9 +45,9 @@
     display: flex;
     padding-top: 10%;
     justify-content: center;
-    gap: 2%;
-    padding-left: 8%;
-    padding-right: 2.7%;
+    gap: 20%;
+    
+    
 
 
 }
@@ -143,16 +144,26 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: darkcyan;
+    background: rgb(2, 216, 216);
+    
 }
 
 .thirdcontent{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 5rem;
+    padding-top: 3rem;
     color:ghostwhite;
-    background-color: darkcyan;
+    
+    padding-left: 20%;
+    padding-right: 20%;
+    
+    
+}
+.thirdcontent h3{
+    font-size: 48px;
+    margin-bottom: 1%;
     
 }
 
